--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,15 +27,14 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
-dependencies:
+dependencies: 
   flutter:
     sdk: flutter
   google_fonts: ^6.2.1
   http: ^1.2.1
   modal_progress_hud_nsn: ^0.5.1
-
-
-
+  file_picker: ^8.0.5
+  cloud_firestore: ^5.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
