--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,17 +1,10 @@
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
-
 buildscript {
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.google.gms.google-services:4.4.2'
+        id 'com.google.gms.google-services' version '4.4.2' apply false
     }
 }
 
