--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,12 @@ dependencies:
   http: ^1.2.1
   modal_progress_hud_nsn: ^0.5.1
   file_picker: ^8.0.5
-  cloud_firestore: ^5.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-
+  url_launcher: ^6.3.0
+  carousel_slider: ^4.2.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
