--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,9 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        id 'com.google.gms.google-services' version '4.4.2' apply false
+        ext.kotlin_version = '1.9.0'
+        classpath 'com.google.gms:google-services:4.3.8'
+        // Aquí agregamos la versión de Kotlin
     }
 }
 
@@ -12,6 +14,7 @@ rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
+
 subprojects {
     project.evaluationDependsOn(":app")
 }
