--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,10 @@ dependencies:
   cupertino_icons: ^1.0.6
   url_launcher: ^6.3.0
   carousel_slider: ^4.2.1
-  
+  google_maps_flutter: ^2.7.0
+  geocoding: ^3.0.0
+  geolocator: ^12.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
