--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_maps_flutter: ^2.7.0
   geocoding: ^3.0.0
   geolocator: ^12.0.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
